--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -6,11 +6,33 @@
     @apply bg-[#003C97] dark:bg-gray-950 !important;
 }
 
+.fi-sidebar-header {
+    @apply bg-[#003C97] shadow-none ring-0 dark:bg-gray-950 !important;
+}
+
 .fi-sidebar-item-button {
-    @apply bg-transparent !important;
+    @apply bg-transparent text-white !important;
+}
+
+.fi-sidebar-item-active .fi-sidebar-item-label,
+.fi-sidebar-item-active .fi-sidebar-item-icon {
+    @apply text-amber-500 !important;
+}
+
+.fi-sidebar-item-label,
+.fi-sidebar-item-icon {
+    @apply text-white !important;
+}
+
+.fi-topbar nav {
+    @apply bg-[#ECF0F3] shadow-none ring-0 !important;
 }
 
 .fi-main {
+    @apply bg-[#ECF0F3] !important;
+}
+
+.fi-topbar {
     @apply bg-[#ECF0F3] !important;
 }
 
@@ -20,4 +42,24 @@
 
 .fi-ta-image {
     @apply py-2 !important;
+}
+
+.fi-wi-stats-overview-stat {
+    @apply grid grid-cols-2 items-center text-[#004581] !important;
+}
+
+.fi-wi-stats-overview-stat-value {
+    @apply text-[#004581] !important;
+}
+
+.fi-wi-stats-overview-stat-label {
+    @apply text-[#004581] !important;
+}
+
+.fi-wi-stats-overview-stat-description {
+    @apply text-[#004581] !important;
+}
+
+.fi-wi-stats-overview-stat-chart {
+    @apply relative h-full  !important;
 }
